--- a/addons/purchase/static/src/views/purchase_dashboard.xml
+++ b/addons/purchase/static/src/views/purchase_dashboard.xml
@@ -11,19 +11,31 @@
                         <div class="g-col-10 g-col-sm-10 grid gap-1">
                             <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Draft RFQs" filter_name="draft_rfqs">
                                 <a href="#" class="btn purchase-dashboard-card"
-                                    t-attf-class="{{ purchaseData['all_draft_rfqs'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
-                                    <div class="fs-2" t-out="purchaseData['all_to_send']"/>New
+                                    t-attf-class="{{ purchaseData['global']['draft']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
+                                    <div class="fs-2" t-out="purchaseData['global']['draft']['all']"/>New
                                 </a>
                             </div>
-                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Waiting RFQs" filter_name="waiting_rfqs">
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Sent RFQs" filter_name="waiting_rfqs">
                                 <a href="#" class="btn btn-secondary purchase-dashboard-card">
-                                    <div class="fs-2" t-out="purchaseData['all_waiting']"/>RFQ Sent
+                                    <div class="fs-2" t-out="purchaseData['global']['sent']['all']"/>RFQ Sent
                                 </a>
                             </div>
-                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Late RFQs" filter_name="late_rfqs">
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Late RFQs" filter_name="late">
                                 <a href="#" class="btn purchase-dashboard-card"
-                                    t-attf-class="{{ purchaseData['all_late'] == 0 ? 'btn btn-secondary' : 'btn btn-warning' }}">
-                                    <div class="fs-2" t-out="purchaseData['all_late']"/>Late
+                                    t-attf-class="{{ purchaseData['global']['late']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-warning' }}">
+                                    <div class="fs-2" t-out="purchaseData['global']['late']['all']"/>Late RFQ
+                                </a>
+                            </div>
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Not Acknowledged RFQs" filter_name="not_acknowledged">
+                                <a href="#" class="btn purchase-dashboard-card"
+                                    t-attf-class="{{ purchaseData['global']['not_acknowledged']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
+                                    <div class="fs-2" t-out="purchaseData['global']['not_acknowledged']['all']"/>Not Acknowledged
+                                </a>
+                            </div>
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Late Receipt RFQs" filter_name="late_receipt">
+                                <a href="#" class="btn purchase-dashboard-card"
+                                    t-attf-class="{{ purchaseData['global']['late_receipt']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-danger' }}">
+                                    <div class="fs-2" t-out="purchaseData['global']['late_receipt']['all']"/>Late Receipt
                                 </a>
                             </div>
                         </div>
@@ -35,19 +47,31 @@
                         <div class="g-col-10 g-col-sm-10 grid gap-1 pt-2">
                             <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Draft RFQs" filter_name="draft_rfqs,my_purchases">
                                 <a href="#" class="btn purchase-dashboard-card"
-                                    t-attf-class="{{ purchaseData['my_to_send'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
-                                    <div t-out="purchaseData['my_to_send']"/>
+                                    t-attf-class="{{ purchaseData['my']['draft']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
+                                    <div t-out="purchaseData['my']['draft']['all']"/>
                                 </a>
                             </div>
                             <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Waiting RFQs" filter_name="waiting_rfqs,my_purchases">
                                 <a href="#" class="btn btn-secondary purchase-dashboard-card">
-                                    <div t-out="purchaseData['my_waiting']"/>
+                                    <div t-out="purchaseData['my']['sent']['all']"/>
                                 </a>
                             </div>
-                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Late RFQs" filter_name="late_rfqs,my_purchases">
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Late RFQs" filter_name="late,my_purchases">
                                 <a href="#" class="btn purchase-dashboard-card"
-                                    t-attf-class="{{ purchaseData['my_late'] == 0 ? 'btn btn-secondary' : 'btn btn-warning' }}">
-                                    <div t-out="purchaseData['my_late']"/>
+                                    t-attf-class="{{ purchaseData['my']['late']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-warning' }}">
+                                    <div t-out="purchaseData['my']['late']['all']"/>
+                                </a>
+                            </div>
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Not Acknowledged RFQs" filter_name="not_acknowledged,my_purchases">
+                                <a href="#" class="btn purchase-dashboard-card"
+                                    t-attf-class="{{ purchaseData['my']['not_acknowledged']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
+                                    <div t-out="purchaseData['my']['not_acknowledged']['all']"/>
+                                </a>
+                            </div>
+                            <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Late Receipt RFQs" filter_name="late_receipt,my_purchases">
+                                <a href="#" class="btn purchase-dashboard-card"
+                                    t-attf-class="{{ purchaseData['my']['late_receipt']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-danger' }}">
+                                    <div t-out="purchaseData['my']['late_receipt']['all']"/>
                                 </a>
                             </div>
                         </div>
