--- a/addons/hr_holidays/views/hr_leave_type_views.xml
+++ b/addons/hr_holidays/views/hr_leave_type_views.xml
@@ -72,6 +72,7 @@
                         <group>
                             <field name="company_id" groups="base.group_multi_company" readonly="is_used" placeholder="Visible to all"/>
                             <field name="country_id" groups="base.group_multi_company" readonly="company_id or is_used"/>
+                            <field name="country_id" invisible="1"/>
                         </group>
                     </group>
                     <group>
