[IMP] account_peppol: auto-detect sender/receiver registration
If the user is already registered on another SMP, we know we can only
register him as a sender.
If not, we have to register him as a receiver.
A user can't be only a sender on Peppol.

task-4394408

closes odoo/odoo#197698

X-original-commit: 386fb111dc3ad0ab66acfb3c00bc8bce24512339
Signed-off-by: Laurent Smet (las) <las@odoo.com>
Signed-off-by: Claire Bretton (clbr) <clbr@odoo.com>

--- a/addons/account_peppol/wizard/peppol_registration_views.xml
+++ b/addons/account_peppol/wizard/peppol_registration_views.xml
@@ -16,7 +16,7 @@
                         <p class="text-muted">Send electronic invoices, and receive bills automatically via Peppol</p>
                         <group col="1">
                             <group>
-                                <field name="smp_registration" string="Allow incoming invoices" widget="boolean_toggle"/>
+                                <field name="smp_registration" string="Allow incoming invoices" invisible="1"/>
                                 <field name="peppol_eas"
                                        nolabel="1"
                                        class="o_field_peppol_eas_selection"/>
