[IMP] web, *: add kanban in binding_view_types
Since Kanban now has the same selection feature as the List view, it is
now possible to do the same actions for both views. 'kanban' key has been
added in this commit to all binding_view_types declaration where 'list'
was already used.

Part-of: odoo/odoo#194090
Related: odoo/enterprise#77329
Signed-off-by: Adrien Dieudonné (adr) <adr@odoo.com>

--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -669,7 +669,7 @@
     'default_composition_mode': 'mass_mail',
                 }</field>
             <field name="binding_model_id" ref="model_crm_lead"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
         <!--
@@ -1237,7 +1237,7 @@
             <field name="target">new</field>
             <field name="context">{'default_res_model': 'crm.lead', 'default_res_ids': active_ids}</field>
             <field name="binding_model_id" ref="model_crm_lead"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
 </odoo>
