--- a/addons/account_debit_note/wizard/account_debit_note_view.xml
+++ b/addons/account_debit_note/wizard/account_debit_note_view.xml
@@ -34,7 +34,7 @@
             <field name="view_id" ref="view_account_debit_note"/>
             <field name="target">new</field>
             <field name="binding_model_id" ref="account.model_account_move" />
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
     </data>
 </odoo>
