--- a/addons/crm/wizard/crm_lead_to_opportunity_mass_views.xml
+++ b/addons/crm/wizard/crm_lead_to_opportunity_mass_views.xml
@@ -59,6 +59,6 @@
         <field name="target">new</field>
         <field name="context">{}</field>
         <field name="binding_model_id" ref="model_crm_lead"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
 </odoo>
