--- a/addons/crm_sms/views/crm_lead_views.xml
+++ b/addons/crm_sms/views/crm_lead_views.xml
@@ -12,7 +12,7 @@
             'default_res_ids': active_ids
         }</field>
         <field name="binding_model_id" ref="crm.model_crm_lead"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
     <record id="crm_lead_act_window_sms_composer_multi" model="ir.actions.act_window">
         <field name="name">Send SMS</field>
