--- a/addons/mail/views/res_partner_views.xml
+++ b/addons/mail/views/res_partner_views.xml
@@ -107,7 +107,7 @@
                 'default_reply_to_force_new': True,
             }</field>
             <field name="binding_model_id" ref="base.model_res_partner"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
     </data>
