--- a/addons/mail/wizard/mail_template_reset_views.xml
+++ b/addons/mail/wizard/mail_template_reset_views.xml
@@ -21,7 +21,7 @@
         <field name="name">Reset Mail Template</field>
         <field name="res_model">mail.template.reset</field>
         <field name="binding_model_id" ref="mail.model_mail_template"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
         <field name="context">{
