--- a/addons/mrp_account/views/product_views.xml
+++ b/addons/mrp_account/views/product_views.xml
@@ -81,7 +81,7 @@
             <field name="name">Compute Price from BoM</field>
             <field name="model_id" ref="product.model_product_template"/>
             <field name="binding_model_id" ref="product.model_product_template"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
             <field name="state">code</field>
             <field name="code">
             if records:
@@ -93,7 +93,7 @@
             <field name="name">Compute Price from BoM</field>
             <field name="model_id" ref="product.model_product_product"/>
             <field name="binding_model_id" ref="product.model_product_product"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
             <field name="state">code</field>
             <field name="code">
             if records:
