--- a/addons/project/views/project_project_stage_views.xml
+++ b/addons/project/views/project_project_stage_views.xml
@@ -123,7 +123,7 @@
         <field name="name">Delete</field>
         <field name="model_id" ref="project.model_project_project_stage"/>
         <field name="binding_model_id" ref="project.model_project_project_stage"/>
-        <field name="binding_view_types">form,list</field>
+        <field name="binding_view_types">form,list,kanban</field>
         <field name="state">code</field>
         <field name="code">action = records.unlink_wizard(stage_view=True)</field>
     </record>
