--- a/addons/project/views/project_project_views.xml
+++ b/addons/project/views/project_project_views.xml
@@ -25,7 +25,7 @@
                 'default_composition_mode': 'mass_mail',
             }</field>
             <field name="binding_model_id" ref="project.model_project_project"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
         <record id="edit_project" model="ir.ui.view">
