--- a/addons/project_sms/views/project_project_views.xml
+++ b/addons/project_sms/views/project_project_views.xml
@@ -12,6 +12,6 @@
             'default_res_ids': active_ids,
         }</field>
         <field name="binding_model_id" ref="model_project_project"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
 </odoo>
