--- a/addons/sale/wizard/mass_cancel_orders_views.xml
+++ b/addons/sale/wizard/mass_cancel_orders_views.xml
@@ -40,7 +40,7 @@
         <field name="view_id" ref="mass_cancel_orders_view_form"/>
         <field name="target">new</field>
         <field name="binding_model_id" ref="model_sale_order"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
 
 </odoo>
