--- a/addons/sms/views/res_partner_views.xml
+++ b/addons/sms/views/res_partner_views.xml
@@ -37,7 +37,7 @@
             'default_res_ids': active_ids
         }</field>
         <field name="binding_model_id" ref="base.model_res_partner"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
     <record id="res_partner_act_window_sms_composer_single" model="ir.actions.act_window">
         <field name="name">Send SMS</field>
