--- a/addons/sms/wizard/sms_template_reset_views.xml
+++ b/addons/sms/wizard/sms_template_reset_views.xml
@@ -22,7 +22,7 @@
         <field name="name">Reset SMS Template</field>
         <field name="res_model">sms.template.reset</field>
         <field name="binding_model_id" ref="sms.model_sms_template"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
         <field name="context">{
