--- a/addons/stock_picking_batch/views/stock_picking_batch_views.xml
+++ b/addons/stock_picking_batch/views/stock_picking_batch_views.xml
@@ -282,7 +282,7 @@
         <field name="name">Unreserve</field>
         <field name="model_id" ref="stock_picking_batch.model_stock_picking_batch"/>
         <field name="binding_model_id" ref="stock_picking_batch.model_stock_picking_batch"/>
-        <field name="binding_view_types">list,form</field>
+        <field name="binding_view_types">list,kanban,form</field>
         <field name="state">code</field>
         <field name="code">
         if records:
