--- a/addons/stock_picking_batch/wizard/stock_add_to_wave_views.xml
+++ b/addons/stock_picking_batch/wizard/stock_add_to_wave_views.xml
@@ -28,6 +28,6 @@
         <field name="view_mode">form</field>
         <field name="target">new</field>
         <field name="binding_model_id" ref="stock.model_stock_picking"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
 </odoo>
