--- a/odoo/addons/base/views/ir_ui_view_views.xml
+++ b/odoo/addons/base/views/ir_ui_view_views.xml
@@ -142,7 +142,7 @@
             <field name="view_mode">form</field>
             <field name="target">new</field>
             <field name="binding_model_id" ref="model_ir_ui_view"/>
-            <field name="binding_view_types">form,list</field>
+            <field name="binding_view_types">form,list,kanban</field>
         </record>
 
         <!-- View customizations -->
