--- a/addons/account/views/account_account_views.xml
+++ b/addons/account/views/account_account_views.xml
@@ -191,7 +191,7 @@
             <field name="model_id" ref="model_account_account"/>
             <field name="groups_id" eval="[(4, ref('account.group_account_manager'))]"/>
             <field name="binding_model_id" ref="account.model_account_account" />
-            <field name="binding_view_types">form,list</field>
+            <field name="binding_view_types">form,list,kanban</field>
             <field name="state">code</field>
             <field name="code">
 if records:
