--- a/addons/account/views/account_payment_view.xml
+++ b/addons/account/views/account_payment_view.xml
@@ -402,7 +402,7 @@
             <field name="groups_id" eval="[(4, ref('account.group_account_invoice'))]"/>
             <field name="model_id" ref="account.model_account_payment"/>
             <field name="binding_model_id" ref="account.model_account_payment"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
             <field name="code">
                 records.action_post()
             </field>
@@ -437,7 +437,7 @@
                 'default_email_layout_xmlid': 'mail.mail_notification_light',
             }"/>
             <field name="binding_model_id" ref="model_account_payment"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
     </data>
 </odoo>
