--- a/addons/account/wizard/account_merge_wizard_views.xml
+++ b/addons/account/wizard/account_merge_wizard_views.xml
@@ -40,7 +40,7 @@
             <field name="res_model">account.merge.wizard</field>
             <field name="binding_model_id" ref="account.model_account_account"/>
             <field name="binding_type">action</field>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
             <field name="view_mode">form</field>
             <field name="view_id" eval="ref('account.account_merge_wizard_form')"/>
             <field name="target">new</field>
