--- a/addons/account/wizard/account_resequence_views.xml
+++ b/addons/account/wizard/account_resequence_views.xml
@@ -38,7 +38,7 @@
             <field name="target">new</field>
             <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
             <field name="binding_model_id" ref="account.model_account_move" />
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
     </data>
 </odoo>
