--- a/addons/crm/wizard/crm_merge_opportunities_views.xml
+++ b/addons/crm/wizard/crm_merge_opportunities_views.xml
@@ -37,7 +37,7 @@
             <field name="view_mode">form</field>
             <field name="target">new</field>
             <field name="binding_model_id" ref="model_crm_lead"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
 </odoo>
