--- a/addons/l10n_id/views/account_move_views.xml
+++ b/addons/l10n_id/views/account_move_views.xml
@@ -5,7 +5,7 @@
             <field name="groups_id" eval="[(4, ref('account.group_account_invoice'))]"/>
             <field name="model_id" ref="account.model_account_move"/>
             <field name="binding_model_id" ref="account.model_account_move"/>
-            <field name="binding_view_types">list,form</field>
+            <field name="binding_view_types">list,kanban,form</field>
             <field name="state">code</field>
             <field name="code">
                 if records:
