--- a/addons/l10n_my_edi_extended/views/account_move_view.xml
+++ b/addons/l10n_my_edi_extended/views/account_move_view.xml
@@ -56,7 +56,7 @@
         <field name="state">code</field>
         <field name="model_id" ref="model_account_move"/>
         <field name="binding_model_id" ref="model_account_move"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="code">
             if records:
                 action = records.action_l10n_my_edi_send_invoice()
