--- a/addons/l10n_vn_edi_viettel/views/account_move_views.xml
+++ b/addons/l10n_vn_edi_viettel/views/account_move_views.xml
@@ -72,7 +72,7 @@
         <field name="name">Send payment status to SInvoice</field>
         <field name="model_id" ref="account.model_account_move"/>
         <field name="binding_model_id" ref="account.model_account_move"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="state">code</field>
         <field name="code">
             if records:
