--- a/addons/mass_mailing/wizard/mailing_list_merge_views.xml
+++ b/addons/mass_mailing/wizard/mailing_list_merge_views.xml
@@ -32,6 +32,6 @@
         <field name="view_mode">form</field>
         <field name="target">new</field>
         <field name="binding_model_id" ref="model_mailing_list"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
     </record>
 </odoo>
