--- a/addons/mrp/views/mrp_workorder_views.xml
+++ b/addons/mrp/views/mrp_workorder_views.xml
@@ -497,7 +497,7 @@
         <field name="name">Start</field>
         <field name="model_id" ref="mrp.model_mrp_workorder"/>
         <field name="binding_model_id" ref="mrp.model_mrp_workorder"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="state">code</field>
         <field name="code">action = records.button_start(raise_on_invalid_state=True)</field>
     </record>
@@ -506,7 +506,7 @@
         <field name="name">Pause</field>
         <field name="model_id" ref="mrp.model_mrp_workorder"/>
         <field name="binding_model_id" ref="mrp.model_mrp_workorder"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="state">code</field>
         <field name="code">action = records.button_pending()</field>
     </record>
