--- a/addons/point_of_sale/views/pos_order_view.xml
+++ b/addons/point_of_sale/views/pos_order_view.xml
@@ -457,7 +457,7 @@
         <field name="groups_id" eval="[(4, ref('point_of_sale.group_pos_user'))]"/>
         <field name="binding_model_id" ref="point_of_sale.model_pos_order" />
         <field name="state">code</field>
-        <field name="binding_view_types">list,form</field>
+        <field name="binding_view_types">list,kanban,form</field>
         <field name="code">
 if records:
     action = records.action_pos_order_cancel()
@@ -468,7 +468,7 @@ if records:
         <field name="name">Send Email</field>
         <field name="model_id" ref="point_of_sale.model_pos_order"/>
         <field name="binding_model_id" ref="point_of_sale.model_pos_order"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="state">code</field>
         <field name="code">
             if records:
