--- a/addons/project/views/project_task_type_views.xml
+++ b/addons/project/views/project_task_type_views.xml
@@ -136,7 +136,7 @@
             <field name="name">Delete</field>
             <field name="model_id" ref="project.model_project_task_type"/>
             <field name="binding_model_id" ref="project.model_project_task_type"/>
-            <field name="binding_view_types">form,list</field>
+            <field name="binding_view_types">form,list,kanban</field>
             <field name="state">code</field>
             <field name="code">action = records.unlink_wizard(stage_view=True)</field>
         </record>
