--- a/addons/project/views/project_task_views.xml
+++ b/addons/project/views/project_task_views.xml
@@ -310,7 +310,7 @@
                 'default_composition_mode': 'mass_mail',
             }</field>
             <field name="binding_model_id" ref="project.model_project_task"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
         <record id="view_task_form2" model="ir.ui.view">
@@ -1238,7 +1238,7 @@
             <field name="target">new</field>
             <field name="context">{'default_res_model': 'project.task', 'default_res_ids': active_ids}</field>
             <field name="binding_model_id" ref="project.model_project_task"/>
-            <field name="binding_view_types">list</field>
+            <field name="binding_view_types">list,kanban</field>
         </record>
 
         <record id="project_milestone_action_view_tasks" model="ir.actions.act_window">
