--- a/addons/project_sms/views/project_task_views.xml
+++ b/addons/project_sms/views/project_task_views.xml
@@ -11,6 +11,6 @@
             'default_res_ids': active_ids,
         }</field>
         <field name="binding_model_id" ref="model_project_task"/>
-        <field name="binding_view_types">list,form</field>
+        <field name="binding_view_types">list,kanban,form</field>
     </record>
 </odoo>
