--- a/addons/web/views/partner_view.xml
+++ b/addons/web/views/partner_view.xml
@@ -4,7 +4,7 @@
         <field name="name">Download (vCard)</field>
         <field name="model_id" ref="model_res_partner"/>
         <field name="binding_model_id" ref="model_res_partner"/>
-        <field name="binding_view_types">form,list</field>
+        <field name="binding_view_types">form,list,kanban</field>
         <field name="state">code</field>
         <field name="code">
             action = {
