--- a/addons/website_livechat/views/website_visitor_views.xml
+++ b/addons/website_livechat/views/website_visitor_views.xml
@@ -134,7 +134,7 @@
         <field name="name">Send Chat Requests</field>
         <field name="model_id" ref="model_website_visitor"/>
         <field name="binding_model_id" ref="model_website_visitor"/>
-        <field name="binding_view_types">list</field>
+        <field name="binding_view_types">list,kanban</field>
         <field name="state">code</field>
         <field name="code">
             if records:
