[IMP] website, *: add ExtraInfo option to searchbar results
*website_sale
Before this commit, there was no option to display product reviews in
the search results. This commit introduces a new generic option for
displaying extra information in search results. For products, this will
show the reviews (if available), but the option can be used for other
entities as well.
For example:
- Blogs -> Display tags
- Events -> Display location or sold-out status
- Appointments -> Display duration time
...

After this commit, product reviews will be shown in the search results
when the option is enabled (if reviews are available).

Part of task-4029264.

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -2821,6 +2821,7 @@ Sitemap: <t t-esc="url_root"/>sitemap.xml
         <attribute name="t-att-data-display-image">display_image or 'true'</attribute>
         <attribute name="t-att-data-display-description">display_description or 'true'</attribute>
         <attribute name="t-att-data-display-extra-link">display_extra_link or 'true'</attribute>
+        <attribute name="t-att-data-display-extra-info">display_extra_info or 'true'</attribute>
         <attribute name="t-att-data-display-detail">display_detail or 'true'</attribute>
         <attribute name="t-att-data-order-by">order_by or 'name asc'</attribute>
     </xpath>
