[IMP] website: add template option to searchbar snippet
Before this commit, there was no option to customize the template for
how search results are displayed in the search bar snippet.

After this commit, a new option allows users to change the result
template.
Currently, only one additional template is available for demonstration
purposes, but more templates are expected to be added in the future.

Part of task-4029264.

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -2816,6 +2816,7 @@ Sitemap: <t t-esc="url_root"/>sitemap.xml
 <!-- Search Bar input-group template -->
 <template id="website_search_box_input" inherit_id="website.website_search_box" primary="True">
     <xpath expr="//input[@name='search']" position="attributes">
+        <attribute name="t-att-data-search-template">search_template</attribute>
         <attribute name="t-att-data-search-type">search_type</attribute>
         <attribute name="t-att-data-limit">limit or '5'</attribute>
         <attribute name="t-att-data-display-image">display_image or 'true'</attribute>
