[IMP] purchase_stock: add OTD to dashboard
Part-of: odoo/odoo#197211
Related: odoo/upgrade#7213
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/purchase/static/src/views/purchase_dashboard.xml
+++ b/addons/purchase/static/src/views/purchase_dashboard.xml
@@ -130,7 +130,7 @@
                 <div class="col-12 col-lg-2 col-xl-2 col-xxl-2 flex-shrink-0">
                     <div class="grid gap-4">
                         <div class="g-col-12 g-col-sm-12 grid gap-1">
-                            <div class="g-col-6 p-0" id="left_grid"/>
+                            <div class="g-col-6 p-0" id="left_grid_top"/>
                             <div class="g-col-6 p-0" title="All Days to Order">
                                 <div class="btn purchase-dashboard-card o_no_hover"
                                     t-attf-class="{{
@@ -144,7 +144,7 @@
                     </div>
                     <div class="grid gap-4 pt-2">
                         <div class="g-col-12 g-col-sm-12 grid gap-1">
-                            <div class="g-col-6 p-0" id="left_grid"/>
+                            <div class="g-col-6 p-0" id="left_grid_bottom"/>
                             <div class="g-col-6 p-0" title="All Days to Order">
                                 <div class="btn purchase-dashboard-card o_no_hover"
                                     t-attf-class="{{
