[IMP] purchase: last UI update
The source is not always useful and charge the interface so we set it in
optional hide.

The purchase alternative icon was not explicit and it redirect nowhere
when clicked. So we remove it and let the user handle alternative in the
tab directly.

Part-of: odoo/odoo#197211
Related: odoo/upgrade#7213
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/purchase/report/purchase_quotation_templates.xml
+++ b/addons/purchase/report/purchase_quotation_templates.xml
@@ -37,7 +37,7 @@
                                     <span t-field="order_line.name"/>
                                 </td>
                                 <td class="text-center">
-                                    <span t-field="order_line.date_planned"/>
+                                    <span t-field="order_line.date_planned" t-options="{'date_only': 'true'}"/>
                                 </td>
                                 <td class="text-end">
                                     <span t-field="order_line.product_qty"/>
