[IMP] purchase: add priority in dashboard
Part-of: odoo/odoo#197211
Related: odoo/upgrade#7213
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/purchase/static/src/views/purchase_dashboard.scss
+++ b/addons/purchase/static/src/views/purchase_dashboard.scss
@@ -1,9 +1,15 @@
-.purchase-dashboard-card {
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-}
+.o_purchase_dashboard {
+    .purchase-dashboard-card {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
 
-.o_no_hover {
-    pointer-events: none;
+    .o_no_hover {
+        pointer-events: none;
+    }
+
+    .o_priority_star {
+        color: yellow;
+    }
 }
