[FIX] marketing_card: ui/ux improvements
After this commit:
=====================
- String of `reward_message` will be changed to 'Thank You Message'.
- A color selector will be added in the tags modal.
- The width will be adjusted for better display of `preview_record_ref`

Task-4387904

--- a/addons/marketing_card/static/src/scss/card_campaign.scss
+++ b/addons/marketing_card/static/src/scss/card_campaign.scss
@@ -8,3 +8,14 @@
 .o_marketing_card_image_preview img {
     border: 3px solid $border-color !important;
 }
+
+.o_card_campaign_form .o_field_reference .o_row {
+    select {
+        width: 40% !important;
+        padding-right: 10px;
+    }
+    .o_field_many2one_selection{
+        margin-left: 10px;
+        width: 60% !important;
+    }
+}
