[IMP] purchase: RFQ and PO views in multi edit
The purpose is to be able to assign the documents to different user
easily

Part-of: odoo/odoo#197211
Related: odoo/upgrade#7213
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/purchase/views/purchase_views.xml
+++ b/addons/purchase/views/purchase_views.xml
@@ -548,6 +548,7 @@
             <field name="arch" type="xml">
                 <list string="Purchase Order" decoration-info="state in ['draft', 'sent']"
                 decoration-muted="state == 'cancel'"
+                multi_edit="1"
                 class="o_purchase_order" js_class="purchase_dashboard_list" sample="1">
                     <header>
                         <button name="action_create_invoice" type="object" string="Create Bills"/>
@@ -590,6 +591,7 @@
                     decoration-info="invoice_status == 'to invoice'"
                     string="Purchase Order"
                     class="o_purchase_order"
+                    multi_edit="1"
                     sample="1">
                     <header>
                         <button name="action_create_invoice" type="object" string="Create Bills"/>
